add verify token endpoint
